# Neuroscience-Project

./: .gitignore  .gitmodules  README.md  classification_results_web.csv  data_organizer.py  experiment_results.csv  generate_eidolon_variants.py  generate_jigsaw_variants.py  generate_variants.py  human_experiment.py  humen_summary_results.csv  plot_results.py  pyproject.toml  run.py  run_avr.py  run_vit.py  test.py
Eidolon/eidolon/: helpers.py  noise.py  scalespaces.py
FurtherExploration/: alexnet_features.npy  alexnet_features_meta.csv  analysis.ipynb  extract_alexnet_features.py  extract_vit_base_features.py  generate_noise_samples.py
analysis/: analysis.ipynb  extract_vit_base_features.py  human_clean.py
avr/: experiment_results.csv  experiment_results2.csv  plot_results.py  run.py
human_xr/: analyze_human_results.py  classification_results_web.csv  classification_results_web_v2.csv  human_results_lxr.txt
output/FurtherExploration/: alexnet_features.npy  vit_base_features.npy
output/human/: human_results_lxr.txt
src/: vit_models.py
utils/: analyze_human_results.py  crawler.py  data_organizer.py  generate_noise_samples.py  generate_variants.py  human_experiment.py  plot_results.py  vit_models.py
